Completed backend implementation and fixes