@@ -5,6 +5,7 @@ import com.contractnegotiation.backend.dto.FileUploadResponseDto;
 import com.contractnegotiation.backend.entity.Contract;
 import com.contractnegotiation.backend.entity.ContractStatus;
 import com.contractnegotiation.backend.entity.User;
+import com.contractnegotiation.backend.exception.ContractFileReadException;
 import com.contractnegotiation.backend.exception.InvalidFileException;
 import com.contractnegotiation.backend.exception.ResourceNotFoundException;
 import com.contractnegotiation.backend.repository.ContractRepository;
@@ -14,6 +15,7 @@ import com.contractnegotiation.backend.service.S3Service;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
@@ -30,6 +32,7 @@ public class ContractServiceImpl implements ContractService {
             ContractRepository contractRepository,
             UserRepository userRepository,
             S3Service s3Service) {
+
         this.contractRepository = contractRepository;
         this.userRepository = userRepository;
         this.s3Service = s3Service;
@@ -37,18 +40,25 @@ public class ContractServiceImpl implements ContractService {
 
     @Override
     @Transactional
-    public FileUploadResponseDto uploadContract(MultipartFile file, String title, String username) {
+    public FileUploadResponseDto uploadContract(
+            MultipartFile file,
+            String title,
+            String username) {
+
         validatePdfFile(file);
 
         User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found: " + username));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "User not found: " + username));
 
         String originalFilename = file.getOriginalFilename();
-        if (originalFilename == null || originalFilename.trim().isEmpty()) {
+
+        if (originalFilename == null || originalFilename.isBlank()) {
             originalFilename = "contract.pdf";
         }
 
-        String contractTitle = (title != null && !title.trim().isEmpty())
+        String contractTitle = (title != null && !title.isBlank())
                 ? title
                 : originalFilename;
 
@@ -57,20 +67,21 @@ public class ContractServiceImpl implements ContractService {
         String s3Url = s3Service.uploadFile(file, s3Key);
 
         Contract contract = new Contract();
-
         contract.setTitle(contractTitle);
         contract.setOriginalFileName(originalFilename);
         contract.setFileType(
                 file.getContentType() != null
                         ? file.getContentType()
                         : "application/pdf");
-
         contract.setFileSize(file.getSize());
 
         try {
             contract.setContent(file.getBytes());
         } catch (IOException e) {
-            throw new RuntimeException("Failed to read uploaded PDF", e);
+            throw new ContractFileReadException(
+                    "Failed to read uploaded PDF file.",
+                    e
+            );
         }
 
         contract.setS3Url(s3Url);
@@ -78,24 +89,29 @@ public class ContractServiceImpl implements ContractService {
         contract.setStatus(ContractStatus.UPLOADED);
 
         Contract savedContract = contractRepository.save(contract);
-        
-        return new FileUploadResponseDto(
-                "Contract PDF uploaded successfully",
-                savedContract.getId(),
-                savedContract.getTitle(),
-                savedContract.getOriginalFileName(),
-                savedContract.getFileType(),
-                savedContract.getFileSize(),
-                savedContract.getS3Url(),
-                savedContract.getStatus()
-        );
+        FileUploadResponseDto response = new FileUploadResponseDto();
+
+        response.setMessage("Contract PDF uploaded successfully");
+        response.setContractId(savedContract.getId());
+        response.setTitle(savedContract.getTitle());
+        response.setFileName(savedContract.getOriginalFileName());
+        response.setFileType(savedContract.getFileType());
+        response.setFileSize(savedContract.getFileSize());
+        response.setS3Url(savedContract.getS3Url());
+        response.setStatus(savedContract.getStatus());
+
+        return response;
+       
     }
 
     @Override
     @Transactional(readOnly = true)
     public ContractDto getContractById(Long id) {
+
         Contract contract = contractRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Contract not found with id: " + id));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException(
+                                "Contract not found with id: " + id));
 
         return mapToDto(contract);
     }
@@ -103,8 +119,10 @@ public class ContractServiceImpl implements ContractService {
     @Override
     @Transactional(readOnly = true)
     public List<ContractDto> getContractsByUserId(Long userId) {
+
         if (!userRepository.existsById(userId)) {
-            throw new ResourceNotFoundException("User not found with id: " + userId);
+            throw new ResourceNotFoundException(
+                    "User not found with id: " + userId);
         }
 
         return contractRepository.findByUploadedById(userId)
@@ -116,6 +134,7 @@ public class ContractServiceImpl implements ContractService {
     @Override
     @Transactional(readOnly = true)
     public List<ContractDto> getAllContracts() {
+
         return contractRepository.findAll()
                 .stream()
                 .map(this::mapToDto)
@@ -123,33 +142,48 @@ public class ContractServiceImpl implements ContractService {
     }
 
     private void validatePdfFile(MultipartFile file) {
+
         if (file == null || file.isEmpty()) {
-            throw new InvalidFileException("File is required and cannot be empty");
+            throw new InvalidFileException(
+                    "File is required and cannot be empty");
         }
 
         String filename = file.getOriginalFilename();
         String contentType = file.getContentType();
 
-        boolean isPdfExtension = filename != null && filename.toLowerCase().endsWith(".pdf");
-        boolean isPdfContentType = contentType != null && contentType.equalsIgnoreCase("application/pdf");
+        boolean isPdfExtension =
+                filename != null &&
+                        filename.toLowerCase().endsWith(".pdf");
+
+        boolean isPdfContentType =
+                contentType != null &&
+                        contentType.equalsIgnoreCase("application/pdf");
 
         if (!isPdfExtension && !isPdfContentType) {
-            throw new InvalidFileException("Invalid file format. Only PDF files are allowed.");
+            throw new InvalidFileException(
+                    "Only PDF files are allowed.");
         }
     }
 
     private ContractDto mapToDto(Contract contract) {
-        return new ContractDto(
-                contract.getId(),
-                contract.getTitle(),
-                contract.getOriginalFileName(),
-                contract.getFileType(),
-                contract.getFileSize(),
-                contract.getS3Url(),
-                contract.getUploadedBy() != null ? contract.getUploadedBy().getId() : null,
-                contract.getUploadedBy() != null ? contract.getUploadedBy().getUsername() : null,
-                contract.getUploadedAt(),
-                contract.getStatus()
-        );
+
+        ContractDto dto = new ContractDto();
+
+        dto.setId(contract.getId());
+        dto.setTitle(contract.getTitle());
+        dto.setOriginalFileName(contract.getOriginalFileName());
+        dto.setFileType(contract.getFileType());
+        dto.setFileSize(contract.getFileSize());
+        dto.setS3Url(contract.getS3Url());
+
+        if (contract.getUploadedBy() != null) {
+            dto.setUploadedById(contract.getUploadedBy().getId());
+            dto.setUploadedByUsername(contract.getUploadedBy().getUsername());
+        }
+
+        dto.setUploadedAt(contract.getUploadedAt());
+        dto.setStatus(contract.getStatus());
+
+        return dto;
     }
 }
